nivasa-macros/tests/trybuild/scxml_handler_missing_state.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "request", state = "definitely_missing")]
fn guarded_handler() {}

fn main() {}
